# basic_chess

./: CMakeLists.txt  CMakeLists.txt.user.554a112  README.md  abstractfactory.cpp  abstractfactory.h  bishop.cpp  bishop.h  borderitem.cpp  borderitem.h  chess.h  chessboard.cpp  chessboard.h  concretefactory.cpp  concretefactory.h  draggableitem.cpp  draggableitem.h  globaldefines.h  graphicsscene.cpp  graphicsscene.h  king.cpp  king.h  knight.cpp  knight.h  mainwindow.h  mainwindow.ui  message.cpp  message.h  pawn.cpp  pawn.h  piece.cpp  piece.h  position.h  pressableitem.cpp  pressableitem.h  queen.cpp  queen.h  rook.cpp  rook.h  staticitem.cpp  staticitem.h  (+2 more)
